--- a/cinnamon-keybindings.ini
+++ b/cinnamon-keybindings.ini
@@ -1,5 +1,5 @@
 [/]
-custom-list=['custom1', '__dummy__', 'custom0']
+custom-list=['custom2', 'custom0', '__dummy__', 'custom1']
 
 [custom-keybindings/custom0]
 binding=['<Super>p', '<Super>r']
@@ -10,6 +10,11 @@ name='rofi run prompt'
 binding=['<Super>Tab']
 command='rofi -show window'
 name='rofi show windows'
+
+[custom-keybindings/custom2]
+binding=['<Super>c']
+command='code'
+name='Visual Studio Code'
 
 [media-keys]
 home=['<Super>f', 'XF86Explorer']
