--- a/cinnamon-desktop.ini
+++ b/cinnamon-desktop.ini
@@ -4,7 +4,7 @@ installed-apps=@as []
 
 [com/linuxmint/updates]
 install-last-run=1648511600
-refresh-last-run=1651190201
+refresh-last-run=1651610551
 show-welcome-page=false
 window-height=570
 window-pane-position=280
@@ -70,7 +70,7 @@ text-scaling-factor=1.0
 toolkit-accessibility=false
 
 [org/cinnamon/desktop/keybindings]
-custom-list=['custom1', '__dummy__', 'custom0']
+custom-list=['custom2', 'custom0', '__dummy__', 'custom1']
 
 [org/cinnamon/desktop/keybindings/custom-keybindings/custom0]
 binding=['<Super>p', '<Super>r']
@@ -81,6 +81,11 @@ name='rofi run prompt'
 binding=['<Super>Tab']
 command='rofi -show window'
 name='rofi show windows'
+
+[org/cinnamon/desktop/keybindings/custom-keybindings/custom2]
+binding=['<Super>c']
+command='code'
+name='Visual Studio Code'
 
 [org/cinnamon/desktop/keybindings/media-keys]
 home=['<Super>f', 'XF86Explorer']
@@ -212,6 +217,10 @@ columns-order=[0, 1, 2, 3, 4, 6, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 2
 sort-col=15
 sort-order=0
 
+[org/gnome/nm-applet/eap/c015253c-817a-44f0-be93-fc2aa60f1bb5]
+ignore-ca-cert=false
+ignore-phase2-ca-cert=false
+
 [org/gnome/nm-applet/eap/e43fcb63-0d58-486e-8d6a-12f19236e489]
 ignore-ca-cert=false
 ignore-phase2-ca-cert=false
@@ -268,7 +277,7 @@ selected-color=(true, 0.82745098039215681, 0.84313725490196079, 0.81176470588235
 [org/gtk/settings/file-chooser]
 date-format='regular'
 location-mode='path-bar'
-show-hidden=true
+show-hidden=false
 show-size-column=true
 show-type-column=true
 sidebar-width=164
@@ -276,7 +285,7 @@ sort-column='name'
 sort-directories-first=true
 sort-order='ascending'
 type-format='category'
-window-position=(1778, 161)
+window-position=(1778, 217)
 window-size=(1096, 697)
 
 [org/nemo/desktop]
@@ -300,7 +309,7 @@ show-open-in-terminal-toolbar=true
 show-reload-icon-toolbar=true
 
 [org/nemo/window-state]
-geometry='683x705+585+828'
+geometry='683x705+342+823'
 maximized=false
 side-pane-view='places'
 sidebar-bookmark-breakpoint=5
