Update Cinnamon configs

--- a/.dconf-configs/cinnamon-desktop.ini
+++ b/.dconf-configs/cinnamon-desktop.ini
@@ -4,30 +4,34 @@ installed-apps=@as []
 
 [com/linuxmint/updates]
 install-last-run=1648511600
-refresh-last-run=1651610551
+refresh-last-run=1652979552
 show-welcome-page=false
 window-height=570
 window-pane-position=280
 window-width=790
 
 [org/cinnamon]
+alttab-minimized-aware=true
 alttab-switcher-delay=50
+alttab-switcher-show-all-workspaces=true
+alttab-switcher-style='icons+thumbnails'
 app-menu-label=''
 desklet-snap-interval=25
 desktop-effects-change-size=false
 desktop-effects-maximize=false
-enabled-applets=['panel2:left:0:menu@cinnamon.org:14', 'panel1:center:0:grouped-window-list@cinnamon.org:16', 'panel1:right:3:systray@cinnamon.org:17', 'panel2:right:1:xapp-status@cinnamon.org:18', 'panel2:right:8:notifications@cinnamon.org:19', 'panel2:right:4:printers@cinnamon.org:20', 'panel2:right:0:keyboard@cinnamon.org:22', 'panel2:right:5:favorites@cinnamon.org:23', 'panel2:right:7:network@cinnamon.org:24', 'panel2:right:6:sound@cinnamon.org:25', 'panel2:right:3:power@cinnamon.org:26', 'panel2:center:0:calendar@cinnamon.org:27', 'panel1:right:2:show-desktop@cinnamon.org:28', 'panel1:left:0:workspace-switcher@cinnamon.org:29']
+enabled-applets=['panel2:left:0:menu@cinnamon.org:14', 'panel2:center:1:notifications@cinnamon.org:19', 'panel2:right:2:printers@cinnamon.org:20', 'panel2:right:4:keyboard@cinnamon.org:22', 'panel2:right:9:network@cinnamon.org:24', 'panel2:right:8:sound@cinnamon.org:25', 'panel2:right:7:power@cinnamon.org:26', 'panel2:center:0:calendar@cinnamon.org:27', 'panel2:right:10:user@cinnamon.org:35', 'panel2:right:3:removable-drives@cinnamon.org:37', 'panel2:right:6:xapp-status@cinnamon.org:44']
 enabled-desklets=@as []
 enabled-extensions=@as []
 hotcorner-layout=['expo:false:50', 'scale:false:50', ':false:50', 'desktop:false:50']
-next-applet-id=31
+next-applet-id=47
 no-adjacent-panel-barriers=true
 panel-edit-mode=false
-panel-zone-icon-sizes='[{"panelId":1,"left":16,"center":0,"right":16},{"left":16,"center":16,"right":16,"panelId":2}]'
-panel-zone-symbolic-icon-sizes='[{"panelId": 1, "left": 28, "center": 28, "right": 16}, {"left": 28, "center": 28, "right": 16, "panelId": 2}]'
-panel-zone-text-sizes='[{"panelId":1,"left":0,"center":0,"right":0},{"left":0,"center":0,"right":0,"panelId":2}]'
+panel-launchers=['DEPRECATED']
+panel-zone-icon-sizes='[{"left": 16, "center": 16, "right": 16, "panelId": 2}]'
+panel-zone-symbolic-icon-sizes='[{"left": 16, "center": 16, "right": 16, "panelId": 2}]'
+panel-zone-text-sizes='[{"left":0,"center":0,"right":0,"panelId":2}]'
 panels-autohide=['1:false', '2:false', '3:false', '4:false']
-panels-enabled=['1:1:bottom', '2:0:top']
+panels-enabled=['2:0:top']
 panels-height=['1:36', '2:24', '3:32', '4:40']
 panels-hide-delay=['1:200', '2:0', '3:200', '4:0']
 panels-show-delay=['1:200', '2:0', '3:200', '4:0']
@@ -65,6 +69,9 @@ cursor-blink-time=1200
 cursor-size=24
 gtk-theme='Dracula'
 icon-theme='Dracula'
+keyboard-layout-prefer-variant-names=false
+keyboard-layout-show-flags=false
+keyboard-layout-use-upper=true
 scaling-factor=uint32 0
 text-scaling-factor=1.0
 toolkit-accessibility=false
@@ -106,6 +113,7 @@ autorun-never=false
 [org/cinnamon/desktop/screensaver]
 ask-for-away-message=false
 default-message=''
+layout-group=0
 lock-delay=uint32 60
 use-custom-format=true
 
@@ -113,8 +121,9 @@ use-custom-format=true
 event-sounds=false
 
 [org/cinnamon/desktop/wm/preferences]
-action-scroll-titlebar='none'
-button-layout='close:minimize,maximize'
+action-middle-click-titlebar='none'
+action-scroll-titlebar='shade'
+button-layout='close,minimize,maximize:'
 focus-mode='click'
 focus-new-windows='smart'
 min-window-opacity=30
@@ -126,6 +135,7 @@ memory-limit=2048
 memory-limit-enabled=false
 
 [org/cinnamon/muffin]
+attach-modal-dialogs=false
 resize-threshold=24
 tile-hud-threshold=25
 
@@ -217,6 +227,13 @@ columns-order=[0, 1, 2, 3, 4, 6, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 2
 sort-col=15
 sort-order=0
 
+[org/gnome/libgnomekbd/desktop]
+group-per-window=false
+
+[org/gnome/libgnomekbd/keyboard]
+layouts=['us', 'br']
+options=['grp\tgrp:win_space_toggle', 'terminate\tterminate:ctrl_alt_bksp', 'grp\tgrp:alt_shift_toggle']
+
 [org/gnome/nm-applet/eap/c015253c-817a-44f0-be93-fc2aa60f1bb5]
 ignore-ca-cert=false
 ignore-phase2-ca-cert=false
@@ -227,13 +244,28 @@ ignore-phase2-ca-cert=false
 
 [org/gnome/terminal/legacy]
 mnemonics-enabled=false
+shortcuts-enabled=true
 
 [org/gnome/terminal/legacy/keybindings]
-copy='<Primary><Shift>c'
+close-tab='<Primary><Shift>c'
+close-window='<Shift><Super>c'
+copy='<Primary>c'
 copy-html='disabled'
+detach-tab='<Primary>d'
 find='<Primary>f'
-paste='<Primary><Shift>v'
-select-all='<Primary><Shift>a'
+find-clear='disabled'
+find-next='disabled'
+find-previous='disabled'
+move-tab-left='disabled'
+move-tab-right='disabled'
+new-tab='<Primary>t'
+new-window='<Primary>n'
+next-tab='<Primary>space'
+paste='<Primary>v]'
+preferences='<Alt>e'
+prev-tab='disabled'
+select-all='<Primary>a'
+zoom-in='<Primary>equal'
 
 [org/gnome/terminal/legacy/profiles:]
 default='2f3be536-04b9-4ecf-ae6f-f70cf2dadb8c'
@@ -309,7 +341,7 @@ show-open-in-terminal-toolbar=true
 show-reload-icon-toolbar=true
 
 [org/nemo/window-state]
-geometry='683x705+342+823'
+geometry='960x705+1846+185'
 maximized=false
 side-pane-view='places'
 sidebar-bookmark-breakpoint=5
@@ -341,7 +373,7 @@ size=(959, 705)
 state=87168
 
 [org/x/reader/default]
-window-ratio=(0.71241830065359479, 1.0088383838383839)
+window-ratio=(0.71254071661237783, 1.0092592592592593)
 
 [org/x/sticky]
 active-group='Group 1'
