Fix typo after manual editing

--- a/.dconf-configs/cinnamon-desktop.ini
+++ b/.dconf-configs/cinnamon-desktop.ini
@@ -261,7 +261,7 @@ move-tab-right='disabled'
 new-tab='<Primary>t'
 new-window='<Primary>n'
 next-tab='<Primary>space'
-paste='<Primary>v]'
+paste='<Primary>v'
 preferences='<Alt>e'
 prev-tab='disabled'
 select-all='<Primary>a'
