Change some keybindings

--- a/.dconf-configs/gnome-terminal-keybindings.ini
+++ b/.dconf-configs/gnome-terminal-keybindings.ini
@@ -1,9 +1,9 @@
 [/]
-close-tab='<Primary><Shift>c'
+close-tab='<Alt>c'
 close-window='<Shift><Super>c'
 copy='<Primary>c'
 copy-html='disabled'
-detach-tab='<Primary>d'
+detach-tab='<Alt>d'
 find='<Primary>f'
 find-clear='disabled'
 find-next='disabled'
@@ -16,5 +16,8 @@ next-tab='<Primary>space'
 paste='<Primary>v'
 preferences='<Alt>e'
 prev-tab='disabled'
+reset='disabled'
 select-all='<Primary>a'
+switch-to-tab-last='<Alt>minus'
+toggle-menubar='disabled'
 zoom-in='<Primary>equal'
