Change some keybindings

--- a/.dconf-configs/cinnamon-desktop.ini
+++ b/.dconf-configs/cinnamon-desktop.ini
@@ -247,11 +247,11 @@ mnemonics-enabled=false
 shortcuts-enabled=true
 
 [org/gnome/terminal/legacy/keybindings]
-close-tab='<Primary><Shift>c'
+close-tab='<Alt>c'
 close-window='<Shift><Super>c'
 copy='<Primary>c'
 copy-html='disabled'
-detach-tab='<Primary>d'
+detach-tab='<Alt>d'
 find='<Primary>f'
 find-clear='disabled'
 find-next='disabled'
@@ -264,7 +264,10 @@ next-tab='<Primary>space'
 paste='<Primary>v'
 preferences='<Alt>e'
 prev-tab='disabled'
+reset='disabled'
 select-all='<Primary>a'
+switch-to-tab-last='<Alt>minus'
+toggle-menubar='disabled'
 zoom-in='<Primary>equal'
 
 [org/gnome/terminal/legacy/profiles:]
