Update dconf configs

--- a/.config/.dconf-configs/pop-os-extended.ini
+++ b/.config/.dconf-configs/pop-os-extended.ini
@@ -5,7 +5,7 @@ window-y=99
 
 [io/elementary/appcenter/settings]
 cached-drivers=@as []
-last-refresh-time=int64 1653935394
+last-refresh-time=int64 1654108688
 
 [org/gnome/GWeather]
 temperature-unit='centigrade'
@@ -19,10 +19,18 @@ window-width=954
 locations=[<(uint32 2, <('Campinas', 'SBKP', true, [(-0.40154692362195432, -0.82265123889688618)], [(-0.39968039870670141, -0.82175918366289935)])>)>]
 
 [org/gnome/control-center]
-last-panel='power'
+last-panel='desktop-dock'
 
 [org/gnome/desktop/a11y/applications]
 screen-reader-enabled=false
+
+[org/gnome/desktop/app-folders]
+folder-children=['Pop-Office', 'Pop-System', 'Pop-Utility', '15e8e769-9d62-4375-8566-283cb8d6d8e3']
+
+[org/gnome/desktop/app-folders/folders/15e8e769-9d62-4375-8566-283cb8d6d8e3]
+apps=['code.desktop', 'org.gnome.Terminal.desktop', 'vim.desktop', 'nvim.desktop', 'org.gnome.gedit.desktop']
+excluded-apps=@as []
+name='Programming'
 
 [org/gnome/desktop/app-folders/folders/Pop-Office]
 apps=['libreoffice-calc.desktop', 'libreoffice-draw.desktop', 'libreoffice-impress.desktop', 'libreoffice-math.desktop', 'libreoffice-startcenter.desktop', 'libreoffice-writer.desktop']
@@ -64,13 +72,19 @@ show-battery-percentage=true
 toolkit-accessibility=false
 
 [org/gnome/desktop/notifications]
-application-children=['firefox', 'org-gnome-shell-extensions', 'org-gnome-terminal', 'gnome-network-panel', 'org-gnome-nautilus', 'org-gnome-geary']
+application-children=['firefox', 'org-gnome-shell-extensions', 'org-gnome-terminal', 'gnome-network-panel', 'org-gnome-nautilus', 'org-gnome-geary', 'gnome-power-panel']
 
 [org/gnome/desktop/notifications/application/firefox]
 application-id='firefox.desktop'
 
+[org/gnome/desktop/notifications/application/gnome-control-center]
+application-id='gnome-control-center.desktop'
+
 [org/gnome/desktop/notifications/application/gnome-network-panel]
 application-id='gnome-network-panel.desktop'
+
+[org/gnome/desktop/notifications/application/gnome-power-panel]
+application-id='gnome-power-panel.desktop'
 
 [org/gnome/desktop/notifications/application/org-gnome-geary]
 application-id='org.gnome.Geary.desktop'
@@ -95,12 +109,21 @@ two-finger-scrolling-enabled=true
 [org/gnome/desktop/privacy]
 report-technical-problems=false
 
+[org/gnome/desktop/remote-desktop/rdp]
+enable=true
+tls-cert='/home/matheus/.local/share/gnome-remote-desktop/rdp-tls.crt'
+tls-key='/home/matheus/.local/share/gnome-remote-desktop/rdp-tls.key'
+
 [org/gnome/desktop/screensaver]
 color-shading-type='solid'
+lock-delay=uint32 30
 picture-options='zoom'
 picture-uri='file:///usr/share/backgrounds/pop/sebastien-gabriel-232361.jpg'
 primary-color='#000000'
 secondary-color='#000000'
+
+[org/gnome/desktop/session]
+idle-delay=uint32 240
 
 [org/gnome/desktop/wm/keybindings]
 begin-resize=['<Alt><Super>r']
@@ -177,11 +200,11 @@ edge-tiling=false
 overlay-key='Super_L'
 
 [org/gnome/nautilus/preferences]
-default-folder-viewer='icon-view'
+default-folder-viewer='list-view'
 search-filter-time-type='last_modified'
 
 [org/gnome/nautilus/window-state]
-initial-size=(1912, 1040)
+initial-size=(954, 1044)
 maximized=false
 
 [org/gnome/settings-daemon/plugins/color]
@@ -205,11 +228,17 @@ binding='<Super>c'
 command='code'
 name='VS Code'
 
+[org/gnome/settings-daemon/plugins/power]
+sleep-inactive-ac-timeout=7200
+sleep-inactive-ac-type='suspend'
+sleep-inactive-battery-timeout=900
+sleep-inactive-battery-type='suspend'
+
 [org/gnome/shell]
 command-history=['terminal', 'gnome-terminal']
 disable-user-extensions=false
-disabled-extensions=['apps-menu@gnome-shell-extensions.gcampax.github.com']
-enabled-extensions=['pop-shell@system76.com', 'system76-power@system76.com', 'ubuntu-appindicators@ubuntu.com', 'cosmic-dock@system76.com', 'popx11gestures@system76.com', 'user-theme@gnome-shell-extensions.gcampax.github.com', 'Vitals@CoreCoding.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'cosmic-workspaces@system76.com', 'pop-cosmic@system76.com', 'ding@rastersoft.com', 'dash-to-panel@jderose9.github.com', 'sound-output-device-chooser@kgshank.net', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com']
+disabled-extensions=['apps-menu@gnome-shell-extensions.gcampax.github.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'sound-output-device-chooser@kgshank.net']
+enabled-extensions=['pop-shell@system76.com', 'system76-power@system76.com', 'ubuntu-appindicators@ubuntu.com', 'popx11gestures@system76.com', 'user-theme@gnome-shell-extensions.gcampax.github.com', 'Vitals@CoreCoding.com', 'cosmic-workspaces@system76.com', 'pop-cosmic@system76.com', 'ding@rastersoft.com', 'dash-to-panel@jderose9.github.com', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'cosmic-dock@system76.com']
 favorite-apps=['org.gnome.Terminal.desktop', 'code.desktop', 'gnome-control-center.desktop', 'firefox.desktop', 'org.gnome.Nautilus.desktop']
 welcome-dialog-last-shown-version='42.1'
 
@@ -274,6 +303,7 @@ panel-lengths='{"0":100,"1":100}'
 panel-positions='{"0":"TOP","1":"TOP"}'
 panel-sizes='{"0":28,"1":28}'
 primary-monitor=0
+secondarymenu-contains-showdetails=false
 show-appmenu=false
 show-apps-icon-file=''
 show-favorites=false
@@ -336,6 +366,11 @@ tile-by-default=true
 tile-enter=['<Shift><Super>a', '<Super>apostrophe']
 toggle-floating=['<Super>g', '<Super>t']
 toggle-tiling=['<Super>y', '<Shift><Super>t']
+
+[org/gnome/shell/extensions/sound-output-device-chooser]
+hide-menu-icons=false
+hide-on-single-device=true
+integrate-with-slider=false
 
 [org/gnome/shell/extensions/vitals]
 alphabetize=true
@@ -402,5 +437,5 @@ sort-column='name'
 sort-directories-first=true
 sort-order='ascending'
 type-format='category'
-window-position=(2164, 121)
+window-position=(1778, 119)
 window-size=(1096, 822)
