--- a/.config/.dconf-configs/pop-os-dracula.ini
+++ b/.config/.dconf-configs/pop-os-dracula.ini
@@ -5,7 +5,7 @@ window-y=99
 
 [io/elementary/appcenter/settings]
 cached-drivers=@as []
-last-refresh-time=int64 1654108688
+last-refresh-time=int64 1654282917
 
 [org/gnome/GWeather]
 temperature-unit='centigrade'
@@ -19,7 +19,7 @@ window-width=954
 locations=[<(uint32 2, <('Campinas', 'SBKP', true, [(-0.40154692362195432, -0.82265123889688618)], [(-0.39968039870670141, -0.82175918366289935)])>)>]
 
 [org/gnome/control-center]
-last-panel='desktop-dock'
+last-panel='keyboard'
 
 [org/gnome/desktop/a11y/applications]
 screen-reader-enabled=false
@@ -50,12 +50,14 @@ translate=true
 [org/gnome/desktop/background]
 color-shading-type='solid'
 picture-options='zoom'
+picture-uri='file:///usr/share/backgrounds/pop/sebastien-gabriel-232361.jpg'
 picture-uri-dark='file:///usr/share/backgrounds/pop/sebastien-gabriel-232361.jpg'
 primary-color='#000000'
 secondary-color='#000000'
 
 [org/gnome/desktop/input-sources]
 current=uint32 0
+mru-sources=[('xkb', 'us'), ('xkb', 'br')]
 per-window=false
 sources=[('xkb', 'us'), ('xkb', 'br')]
 xkb-options=['lv3:ralt_switch', 'compose:rctrl']
@@ -63,16 +65,19 @@ xkb-options=['lv3:ralt_switch', 'compose:rctrl']
 [org/gnome/desktop/interface]
 clock-show-weekday=true
 color-scheme='prefer-dark'
+cursor-theme='Pop'
 enable-animations=true
 enable-hot-corners=false
 font-antialiasing='grayscale'
 font-hinting='slight'
+gtk-theme='Dracula-gtk'
+icon-theme='Dracula-icons'
 locate-pointer=true
 show-battery-percentage=true
 toolkit-accessibility=false
 
 [org/gnome/desktop/notifications]
-application-children=['firefox', 'org-gnome-shell-extensions', 'org-gnome-terminal', 'gnome-network-panel', 'org-gnome-nautilus', 'org-gnome-geary', 'gnome-power-panel']
+application-children=['firefox', 'org-gnome-shell-extensions', 'org-gnome-terminal', 'gnome-network-panel', 'org-gnome-nautilus', 'org-gnome-geary', 'gnome-power-panel', 'org-gnome-gedit', 'org-gnome-tweaks', 'gnome-control-center']
 
 [org/gnome/desktop/notifications/application/firefox]
 application-id='firefox.desktop'
@@ -89,6 +94,9 @@ application-id='gnome-power-panel.desktop'
 [org/gnome/desktop/notifications/application/org-gnome-geary]
 application-id='org.gnome.Geary.desktop'
 
+[org/gnome/desktop/notifications/application/org-gnome-gedit]
+application-id='org.gnome.gedit.desktop'
+
 [org/gnome/desktop/notifications/application/org-gnome-nautilus]
 application-id='org.gnome.Nautilus.desktop'
 
@@ -97,6 +105,9 @@ application-id='org.gnome.Shell.Extensions.desktop'
 
 [org/gnome/desktop/notifications/application/org-gnome-terminal]
 application-id='org.gnome.Terminal.desktop'
+
+[org/gnome/desktop/notifications/application/org-gnome-tweaks]
+application-id='org.gnome.tweaks.desktop'
 
 [org/gnome/desktop/peripherals/keyboard]
 numlock-state=true
@@ -144,6 +155,7 @@ action-middle-click-titlebar='none'
 button-layout='close,minimize,maximize:appmenu'
 focus-mode='click'
 num-workspaces=5
+theme='Dracula'
 
 [org/gnome/evolution-data-server]
 migrated=true
@@ -174,8 +186,8 @@ open-recent=false
 bottom-panel-size=140
 side-panel-active-page='GeditWindowDocumentsPanel'
 side-panel-size=200
-size=(948, 465)
-state=87040
+size=(954, 480)
+state=87168
 
 [org/gnome/gnome-system-monitor]
 cpu-smooth-graph=true
@@ -202,10 +214,12 @@ overlay-key='Super_L'
 [org/gnome/nautilus/preferences]
 default-folder-viewer='list-view'
 search-filter-time-type='last_modified'
+search-view='list-view'
 
 [org/gnome/nautilus/window-state]
 initial-size=(954, 1044)
 maximized=false
+sidebar-width=204
 
 [org/gnome/settings-daemon/plugins/color]
 night-light-enabled=true
@@ -235,41 +249,55 @@ sleep-inactive-battery-timeout=900
 sleep-inactive-battery-type='suspend'
 
 [org/gnome/shell]
-command-history=['terminal', 'gnome-terminal']
+command-history=['terminal', 'gnome-terminal', 'r']
 disable-user-extensions=false
-disabled-extensions=['apps-menu@gnome-shell-extensions.gcampax.github.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'sound-output-device-chooser@kgshank.net']
+disabled-extensions=['apps-menu@gnome-shell-extensions.gcampax.github.com', 'just-perfection-desktop@just-perfection', 'sound-output-device-chooser@kgshank.net', 'arcmenu@arcmenu.com']
 enabled-extensions=['pop-shell@system76.com', 'system76-power@system76.com', 'ubuntu-appindicators@ubuntu.com', 'popx11gestures@system76.com', 'user-theme@gnome-shell-extensions.gcampax.github.com', 'Vitals@CoreCoding.com', 'cosmic-workspaces@system76.com', 'pop-cosmic@system76.com', 'ding@rastersoft.com', 'dash-to-panel@jderose9.github.com', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'cosmic-dock@system76.com']
 favorite-apps=['org.gnome.Terminal.desktop', 'code.desktop', 'gnome-control-center.desktop', 'firefox.desktop', 'org.gnome.Nautilus.desktop']
 welcome-dialog-last-shown-version='42.1'
 
 [org/gnome/shell/extensions/arcmenu]
 activate-on-hover=true
+apps-show-extra-details=false
+arc-menu-icon=30
+avatar-style='Round'
+custom-menu-button-icon-size=20.0
 dash-to-panel-standalone=true
-enable-horizontal-flip=false
+disable-user-avatar=false
+distro-icon=4
+enable-horizontal-flip=true
 enable-standlone-runner-menu=false
 hotkey-open-primary-monitor=true
 menu-background-color='rgba(48,48,49,0.98)'
 menu-border-color='rgb(60,60,60)'
 menu-button-appearance='Icon'
+menu-button-icon='Distro_Icon'
 menu-foreground-color='rgb(223,223,223)'
 menu-hotkey='Custom'
 menu-item-active-bg-color='rgb(25,98,163)'
 menu-item-active-fg-color='rgb(255,255,255)'
+menu-item-grid-icon-size='Default'
 menu-item-hover-bg-color='rgb(21,83,158)'
 menu-item-hover-fg-color='rgb(255,255,255)'
-menu-layout='Raven'
+menu-layout='Redmond'
 menu-position-alignment=50
 menu-separator-color='rgba(255,255,255,0.1)'
 multi-monitor=true
+override-menu-theme=false
 pinned-app-list=['Firefox', '', 'userapp-Firefox-A3MBN1.desktop', 'Files', '', 'org.gnome.Nautilus.desktop', 'Terminal', '', 'org.gnome.Terminal.desktop', 'ArcMenu Settings', 'ArcMenu_ArcMenuIcon', 'gnome-extensions prefs arcmenu@arcmenu.com']
 position-in-panel='Left'
 prefs-visible-page=0
+runner-menu-hotkey='Custom'
+searchbar-default-top-location='Top'
 show-activities-button=true
-toggle-arcmenu=['Super_R']
+show-bookmarks=false
+toggle-arcmenu=['<Super_R']
+toggle-runner-menu=['<Alt>2']
 unity-pinned-app-list=['Home', 'ArcMenu_Home', 'ArcMenu_Home', 'Documents', 'ArcMenu_Documents', 'ArcMenu_Documents', 'Downloads', 'ArcMenu_Downloads', 'ArcMenu_Downloads', 'Software', '', 'io.elementary.appcenter.desktop', 'Files', '', 'org.gnome.Nautilus.desktop', 'Log Out', 'application-exit-symbolic', 'ArcMenu_LogOut', 'Lock', 'changes-prevent-symbolic', 'ArcMenu_Lock', 'Power Off', 'system-shutdown-symbolic', 'ArcMenu_PowerOff']
+vert-separator=true
 
 [org/gnome/shell/extensions/dash-to-dock]
-click-action='cycle-windows'
+click-action='minimize-or-previews'
 dash-max-icon-size=32
 dock-fixed=false
 extend-height=false
@@ -293,16 +321,17 @@ focus-highlight-opacity=10
 hotkeys-overlay-combo='TEMPORARILY'
 intellihide=false
 isolate-monitors=true
-isolate-workspaces=false
+isolate-workspaces=true
 leftbox-padding=-1
 multi-monitors=true
 overview-click-to-exit=true
 panel-anchors='{"0":"MIDDLE","1":"MIDDLE"}'
-panel-element-positions='{"0":[{"element":"showAppsButton","visible":false,"position":"stackedTL"},{"element":"activitiesButton","visible":true,"position":"stackedTL"},{"element":"leftBox","visible":true,"position":"stackedTL"},{"element":"taskbar","visible":true,"position":"stackedTL"},{"element":"centerBox","visible":false,"position":"centered"},{"element":"dateMenu","visible":true,"position":"centerMonitor"},{"element":"rightBox","visible":true,"position":"stackedBR"},{"element":"systemMenu","visible":true,"position":"stackedBR"},{"element":"desktopButton","visible":true,"position":"stackedBR"}],"1":[{"element":"showAppsButton","visible":false,"position":"stackedTL"},{"element":"activitiesButton","visible":true,"position":"stackedTL"},{"element":"leftBox","visible":true,"position":"stackedTL"},{"element":"taskbar","visible":true,"position":"stackedTL"},{"element":"centerBox","visible":false,"position":"centered"},{"element":"dateMenu","visible":true,"position":"centerMonitor"},{"element":"rightBox","visible":true,"position":"stackedBR"},{"element":"systemMenu","visible":true,"position":"stackedBR"},{"element":"desktopButton","visible":true,"position":"stackedBR"}]}'
+panel-element-positions='{"0":[{"element":"showAppsButton","visible":false,"position":"stackedTL"},{"element":"leftBox","visible":true,"position":"stackedTL"},{"element":"activitiesButton","visible":true,"position":"stackedTL"},{"element":"taskbar","visible":true,"position":"stackedTL"},{"element":"centerBox","visible":false,"position":"centerMonitor"},{"element":"dateMenu","visible":true,"position":"centerMonitor"},{"element":"rightBox","visible":true,"position":"stackedBR"},{"element":"systemMenu","visible":true,"position":"stackedBR"},{"element":"desktopButton","visible":true,"position":"stackedBR"}],"1":[{"element":"showAppsButton","visible":false,"position":"stackedTL"},{"element":"leftBox","visible":true,"position":"stackedTL"},{"element":"activitiesButton","visible":true,"position":"stackedTL"},{"element":"taskbar","visible":true,"position":"stackedTL"},{"element":"centerBox","visible":false,"position":"centerMonitor"},{"element":"dateMenu","visible":true,"position":"centerMonitor"},{"element":"rightBox","visible":true,"position":"stackedBR"},{"element":"systemMenu","visible":true,"position":"stackedBR"},{"element":"desktopButton","visible":true,"position":"stackedBR"}]}'
 panel-lengths='{"0":100,"1":100}'
 panel-positions='{"0":"TOP","1":"TOP"}'
 panel-sizes='{"0":28,"1":28}'
 primary-monitor=0
+secondarymenu-contains-appmenu=true
 secondarymenu-contains-showdetails=false
 show-appmenu=false
 show-apps-icon-file=''
@@ -350,7 +379,7 @@ world-clock=false
 
 [org/gnome/shell/extensions/pop-cosmic]
 overlay-key-action='WORKSPACES'
-show-applications-button=true
+show-applications-button=false
 show-workspaces-button=true
 workspace-picker-left=true
 
@@ -359,6 +388,7 @@ activate-launcher=['<Super>slash', '<Super>r', '<Shift><Super>Return']
 active-hint=true
 gap-inner=uint32 1
 gap-outer=uint32 1
+hint-color-rgba='rgb(220,116,225)'
 mouse-cursor-follows-active-window=true
 show-skip-taskbar=true
 smart-gaps=false
@@ -371,6 +401,9 @@ toggle-tiling=['<Super>y', '<Shift><Super>t']
 hide-menu-icons=false
 hide-on-single-device=true
 integrate-with-slider=false
+
+[org/gnome/shell/extensions/user-theme]
+name='Dracula-gtk'
 
 [org/gnome/shell/extensions/vitals]
 alphabetize=true
@@ -390,6 +423,7 @@ use-higher-precision=false
 
 [org/gnome/shell/keybindings]
 open-application-menu=@as []
+toggle-application-view=['<Super>a']
 
 [org/gnome/shell/weather]
 automatic-location=true
@@ -423,8 +457,8 @@ toggle-menubar='disabled'
 zoom-in='<Primary>equal'
 
 [org/gtk/settings/color-chooser]
-custom-colors=[(0.98431372549019602, 0.72156862745098038, 0.42352941176470588, 1.0)]
-selected-color=(true, 0.98431372549019602, 0.72156862745098038, 0.42352941176470588, 1.0)
+custom-colors=[(0.86274509803921573, 0.45490196078431372, 0.88235294117647056, 1.0), (0.86340925925925927, 0.45638888888888896, 0.88333333333333341, 1.0), (0.91764705882352937, 0.35686274509803922, 0.94509803921568625, 1.0), (0.91768128654970749, 0.35846666666666666, 0.94333333333333336, 1.0), (0.90980392156862744, 0.054901960784313725, 0.94901960784313721, 1.0), (0.90789821029082796, 0.053833333333333316, 0.95000000000000007, 1.0), (0.86274509803921573, 0.20392156862745098, 0.94901960784313721, 1.0), (0.86114427860696496, 0.20583333333333337, 0.95000000000000007, 1.0)]
+selected-color=(true, 0.86274509803921573, 0.45490196078431372, 0.88235294117647056, 1.0)
 
 [org/gtk/settings/file-chooser]
 date-format='regular'
@@ -437,5 +471,5 @@ sort-column='name'
 sort-directories-first=true
 sort-order='ascending'
 type-format='category'
-window-position=(1778, 119)
+window-position=(1392, 119)
 window-size=(1096, 822)
