--- a/.config/.dconf-configs/pop-os-mac.ini
+++ b/.config/.dconf-configs/pop-os-mac.ini
@@ -70,8 +70,8 @@ enable-animations=true
 enable-hot-corners=false
 font-antialiasing='grayscale'
 font-hinting='slight'
-gtk-theme='Pop-dark'
-icon-theme='Pop'
+gtk-theme='WhiteSur-Dark-purple'
+icon-theme='WhiteSur-purple'
 locate-pointer=true
 show-battery-percentage=true
 toolkit-accessibility=false
@@ -387,7 +387,7 @@ activate-launcher=['<Super>slash', '<Super>r', '<Shift><Super>Return']
 active-hint=true
 gap-inner=uint32 1
 gap-outer=uint32 1
-hint-color-rgba='rgb(255,173,0)'
+hint-color-rgba='rgb(220,116,225)'
 mouse-cursor-follows-active-window=true
 show-skip-taskbar=true
 smart-gaps=false
@@ -402,7 +402,7 @@ hide-on-single-device=true
 integrate-with-slider=false
 
 [org/gnome/shell/extensions/user-theme]
-name='Pop-dark'
+name='WhiteSur-Dark-purple'
 
 [org/gnome/shell/extensions/vitals]
 alphabetize=true
@@ -456,8 +456,8 @@ toggle-menubar='disabled'
 zoom-in='<Primary>equal'
 
 [org/gtk/settings/color-chooser]
-custom-colors=[(0.94901960784313721, 0.74117647058823533, 0.49803921568627452, 1.0), (1.0, 0.69019607843137254, 0.0, 1.0), (1.0, 0.67843137254901964, 0.0, 1.0), (0.86274509803921573, 0.45490196078431372, 0.88235294117647056, 1.0), (0.86340925925925927, 0.45638888888888896, 0.88333333333333341, 1.0), (0.91764705882352937, 0.35686274509803922, 0.94509803921568625, 1.0), (0.91768128654970749, 0.35846666666666666, 0.94333333333333336, 1.0), (0.90980392156862744, 0.054901960784313725, 0.94901960784313721, 1.0)]
-selected-color=(true, 1.0, 0.67843137254901964, 0.0, 1.0)
+custom-colors=[(0.86274509803921573, 0.45490196078431372, 0.88235294117647056, 1.0), (0.86340925925925927, 0.45638888888888896, 0.88333333333333341, 1.0), (0.91764705882352937, 0.35686274509803922, 0.94509803921568625, 1.0), (0.91768128654970749, 0.35846666666666666, 0.94333333333333336, 1.0), (0.90980392156862744, 0.054901960784313725, 0.94901960784313721, 1.0), (0.90789821029082796, 0.053833333333333316, 0.95000000000000007, 1.0), (0.86274509803921573, 0.20392156862745098, 0.94901960784313721, 1.0), (0.86114427860696496, 0.20583333333333337, 0.95000000000000007, 1.0)]
+selected-color=(true, 0.86274509803921573, 0.45490196078431372, 0.88235294117647056, 1.0)
 
 [org/gtk/settings/file-chooser]
 date-format='regular'
