--- a/.config/.dconf-configs/pop-os-orchis.ini
+++ b/.config/.dconf-configs/pop-os-orchis.ini
@@ -70,7 +70,7 @@ enable-animations=true
 enable-hot-corners=false
 font-antialiasing='grayscale'
 font-hinting='slight'
-gtk-theme='Pop-dark'
+gtk-theme='Orchis-Orange-Dark-Compact'
 icon-theme='Pop'
 locate-pointer=true
 show-battery-percentage=true
@@ -216,7 +216,7 @@ search-filter-time-type='last_modified'
 search-view='list-view'
 
 [org/gnome/nautilus/window-state]
-initial-size=(954, 1044)
+initial-size=(689, 732)
 maximized=false
 sidebar-width=204
 
@@ -402,7 +402,7 @@ hide-on-single-device=true
 integrate-with-slider=false
 
 [org/gnome/shell/extensions/user-theme]
-name='Pop-dark'
+name='Orchis-Orange-Dark'
 
 [org/gnome/shell/extensions/vitals]
 alphabetize=true
