Update dconf configs

--- a/.config/.dconf-configs/gnome-terminal-keybindings.ini
+++ b/.config/.dconf-configs/gnome-terminal-keybindings.ini
@@ -11,8 +11,8 @@ find-previous='disabled'
 move-tab-left='disabled'
 move-tab-right='disabled'
 new-tab='<Primary>t'
-new-window='<Primary>n'
-next-tab='<Primary>space'
+new-window='<Primary><Shift>n'
+next-tab='<Primary>b'
 paste='<Primary>v'
 preferences='<Alt>e'
 prev-tab='disabled'
