--- a/.config/.dconf-configs/pop-os-mac.ini
+++ b/.config/.dconf-configs/pop-os-mac.ini
@@ -5,7 +5,7 @@ window-y=99
 
 [io/elementary/appcenter/settings]
 cached-drivers=@as []
-last-refresh-time=int64 1654282917
+last-refresh-time=int64 1654459157
 
 [org/gnome/GWeather]
 temperature-unit='centigrade'
@@ -70,8 +70,8 @@ enable-animations=true
 enable-hot-corners=false
 font-antialiasing='grayscale'
 font-hinting='slight'
-gtk-theme='WhiteSur-Dark-purple'
-icon-theme='WhiteSur-purple'
+gtk-theme='WhiteSur-Dark'
+icon-theme='WhiteSur'
 locate-pointer=true
 show-battery-percentage=true
 toolkit-accessibility=false
@@ -155,6 +155,7 @@ action-middle-click-titlebar='none'
 button-layout='close,minimize,maximize:appmenu'
 focus-mode='click'
 num-workspaces=5
+theme='Dracula'
 
 [org/gnome/evolution-data-server]
 migrated=true
@@ -216,7 +217,7 @@ search-filter-time-type='last_modified'
 search-view='list-view'
 
 [org/gnome/nautilus/window-state]
-initial-size=(954, 1044)
+initial-size=(954, 520)
 maximized=false
 sidebar-width=204
 
@@ -229,17 +230,12 @@ night-light-temperature=uint32 4271
 
 [org/gnome/settings-daemon/plugins/media-keys]
 control-center=['<Alt>s']
-custom-keybindings=['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1/']
+custom-keybindings=@as []
 email=@as []
 logout=['<Primary><Alt>Delete']
 screenreader=@as []
 terminal=['<Primary><Alt>t', '<Super>Return', '<Super>KP_Enter']
 www=['<Super>b', '<Super>w']
-
-[org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1]
-binding='<Super>c'
-command='code'
-name='VS Code'
 
 [org/gnome/settings-daemon/plugins/power]
 sleep-inactive-ac-timeout=7200
@@ -387,7 +383,7 @@ activate-launcher=['<Super>slash', '<Super>r', '<Shift><Super>Return']
 active-hint=true
 gap-inner=uint32 1
 gap-outer=uint32 1
-hint-color-rgba='rgb(220,116,225)'
+hint-color-rgba='rgb(23,37,248)'
 mouse-cursor-follows-active-window=true
 show-skip-taskbar=true
 smart-gaps=false
@@ -402,7 +398,7 @@ hide-on-single-device=true
 integrate-with-slider=false
 
 [org/gnome/shell/extensions/user-theme]
-name='WhiteSur-Dark-purple'
+name='WhiteSur-Dark'
 
 [org/gnome/shell/extensions/vitals]
 alphabetize=true
@@ -444,11 +440,11 @@ find-previous='disabled'
 move-tab-left='disabled'
 move-tab-right='disabled'
 new-tab='<Primary>t'
-new-window='<Primary>n'
-next-tab='<Primary>space'
+new-window='<Primary><Shift>n'
+next-tab='<Primary><Shift>Right'
 paste='<Primary>v'
 preferences='<Alt>e'
-prev-tab='disabled'
+prev-tab='<Primary><Shift>Left'
 reset='disabled'
 select-all='<Primary>a'
 switch-to-tab-last='<Alt>minus'
@@ -456,8 +452,8 @@ toggle-menubar='disabled'
 zoom-in='<Primary>equal'
 
 [org/gtk/settings/color-chooser]
-custom-colors=[(0.86274509803921573, 0.45490196078431372, 0.88235294117647056, 1.0), (0.86340925925925927, 0.45638888888888896, 0.88333333333333341, 1.0), (0.91764705882352937, 0.35686274509803922, 0.94509803921568625, 1.0), (0.91768128654970749, 0.35846666666666666, 0.94333333333333336, 1.0), (0.90980392156862744, 0.054901960784313725, 0.94901960784313721, 1.0), (0.90789821029082796, 0.053833333333333316, 0.95000000000000007, 1.0), (0.86274509803921573, 0.20392156862745098, 0.94901960784313721, 1.0), (0.86114427860696496, 0.20583333333333337, 0.95000000000000007, 1.0)]
-selected-color=(true, 0.86274509803921573, 0.45490196078431372, 0.88235294117647056, 1.0)
+custom-colors=[(0.090196078431372576, 0.14651647893199835, 0.97254901960784312, 1.0), (0.090196078431372548, 0.63529411764705879, 0.97254901960784312, 1.0), (0.090844444444444492, 0.63535886524822716, 0.97333333333333338, 1.0), (0.15294117647058825, 0.49411764705882355, 0.88627450980392153, 1.0), (0.1536888888888889, 0.49251823899371039, 0.88666666666666671, 1.0), (0.25882352941176473, 0.45098039215686275, 0.67450980392156867, 1.0), (0.25882352941176473, 0.45098039215686259, 0.67450980392156867, 1.0), (0.37647058823529411, 0.74901960784313726, 0.93725490196078431, 1.0)]
+selected-color=(true, 0.090196078431372576, 0.14651647893199835, 0.97254901960784312, 1.0)
 
 [org/gtk/settings/file-chooser]
 date-format='regular'
@@ -465,10 +461,10 @@ location-mode='path-bar'
 show-hidden=true
 show-size-column=true
 show-type-column=true
-sidebar-width=150
+sidebar-width=176
 sort-column='name'
 sort-directories-first=true
 sort-order='ascending'
 type-format='category'
-window-position=(1392, 119)
+window-position=(1411, 29)
 window-size=(1096, 822)
