Update theme configs

--- a/.config/.dconf-configs/pop-os-mac.ini
+++ b/.config/.dconf-configs/pop-os-mac.ini
@@ -6,6 +6,9 @@ window-y=99
 [io/elementary/appcenter/settings]
 cached-drivers=@as []
 last-refresh-time=int64 1654459157
+window-maximized=false
+window-position=(2328, 32)
+window-size=(954, 1044)
 
 [org/gnome/GWeather]
 temperature-unit='centigrade'
@@ -71,7 +74,7 @@ enable-hot-corners=false
 font-antialiasing='grayscale'
 font-hinting='slight'
 gtk-theme='WhiteSur-Dark'
-icon-theme='WhiteSur'
+icon-theme='Colloid-light'
 locate-pointer=true
 show-battery-percentage=true
 toolkit-accessibility=false
@@ -90,6 +93,9 @@ application-id='gnome-network-panel.desktop'
 
 [org/gnome/desktop/notifications/application/gnome-power-panel]
 application-id='gnome-power-panel.desktop'
+
+[org/gnome/desktop/notifications/application/io-elementary-appcenter]
+application-id='io.elementary.appcenter.desktop'
 
 [org/gnome/desktop/notifications/application/org-gnome-geary]
 application-id='org.gnome.Geary.desktop'
@@ -441,10 +447,10 @@ move-tab-left='disabled'
 move-tab-right='disabled'
 new-tab='<Primary>t'
 new-window='<Primary><Shift>n'
-next-tab='<Primary><Shift>Right'
+next-tab='<Primary>b'
 paste='<Primary>v'
 preferences='<Alt>e'
-prev-tab='<Primary><Shift>Left'
+prev-tab='disabled'
 reset='disabled'
 select-all='<Primary>a'
 switch-to-tab-last='<Alt>minus'
