--- a/.config/.dconf-configs/pop-os-rice.ini
+++ b/.config/.dconf-configs/pop-os-rice.ini
@@ -6,6 +6,9 @@ window-y=99
 [io/elementary/appcenter/settings]
 cached-drivers=@as []
 last-refresh-time=int64 1654282917
+window-maximized=false
+window-position=(2328, 32)
+window-size=(954, 1044)
 
 [org/gnome/GWeather]
 temperature-unit='centigrade'
@@ -91,6 +94,9 @@ application-id='gnome-network-panel.desktop'
 [org/gnome/desktop/notifications/application/gnome-power-panel]
 application-id='gnome-power-panel.desktop'
 
+[org/gnome/desktop/notifications/application/io-elementary-appcenter]
+application-id='io.elementary.appcenter.desktop'
+
 [org/gnome/desktop/notifications/application/org-gnome-geary]
 application-id='org.gnome.Geary.desktop'
 
@@ -175,6 +181,14 @@ window-width=600
 [org/gnome/gedit/plugins]
 active-plugins=['docinfo', 'openlinks', 'modelines', 'sort', 'spell', 'filebrowser']
 
+[org/gnome/gedit/plugins/filebrowser]
+root='file:///'
+tree-view=true
+virtual-root='file:///home/matheus/.themes/Orchis-Dark-Compact/gnome-shell'
+
+[org/gnome/gedit/preferences/editor]
+scheme='pop-dark'
+
 [org/gnome/gedit/preferences/ui]
 show-tabs-mode='auto'
 
@@ -216,7 +230,7 @@ search-filter-time-type='last_modified'
 search-view='list-view'
 
 [org/gnome/nautilus/window-state]
-initial-size=(689, 732)
+initial-size=(954, 520)
 maximized=false
 sidebar-width=204
 
@@ -229,17 +243,12 @@ night-light-temperature=uint32 4271
 
 [org/gnome/settings-daemon/plugins/media-keys]
 control-center=['<Alt>s']
-custom-keybindings=['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1/']
+custom-keybindings=@as []
 email=@as []
 logout=['<Primary><Alt>Delete']
 screenreader=@as []
 terminal=['<Primary><Alt>t', '<Super>Return', '<Super>KP_Enter']
 www=['<Super>b', '<Super>w']
-
-[org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1]
-binding='<Super>c'
-command='code'
-name='VS Code'
 
 [org/gnome/settings-daemon/plugins/power]
 sleep-inactive-ac-timeout=7200
@@ -444,8 +453,8 @@ find-previous='disabled'
 move-tab-left='disabled'
 move-tab-right='disabled'
 new-tab='<Primary>t'
-new-window='<Primary>n'
-next-tab='<Primary>space'
+new-window='<Primary><Shift>n'
+next-tab='<Primary>b'
 paste='<Primary>v'
 preferences='<Alt>e'
 prev-tab='disabled'
