--- a/.config/.dconf-configs/gnome-terminal-keybindings.ini
+++ b/.config/.dconf-configs/gnome-terminal-keybindings.ini
@@ -4,7 +4,7 @@ close-window='<Shift><Super>c'
 copy='<Primary>c'
 copy-html='disabled'
 detach-tab='<Alt>d'
-find='<Primary>f'
+find='disabled'
 find-clear='disabled'
 find-next='disabled'
 find-previous='disabled'
