--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,4 +1,3 @@
-
 [line_break]
 disabled = true
 
@@ -7,7 +6,7 @@ disabled = true
 # based on the status of the previous command.
 [character]
 success_symbol = "[▶](bold green)"
-error_symbol = "[✖](bold purple) "
+error_symbol = "[✖](bold red) "
 
 [package]
 disabled = true
@@ -21,7 +20,7 @@ style = "bold green"
 format = "| RAM: [${ram}]($style) "
 threshold = 66
 style = "bold dimmed white"
-disabled = false
+disabled = true
 
 [git_branch]
 format = "on [$symbol$branch]($style) "
@@ -46,7 +45,7 @@ format = "[$all_status$ahead_behind]($style)"
 [cmd_duration]
 min_time = 10_000  # Show command duration over 10,000 milliseconds (=10 sec)
 format = " [$duration]($style) "
-disabled = false
+disabled = true
 
 [directory]
 truncation_length = 5
