Update some settings

--- a/.config/.dconf-configs/pop-os-custom.ini
+++ b/.config/.dconf-configs/pop-os-custom.ini
@@ -91,6 +91,9 @@ application-id='gnome-network-panel.desktop'
 [org/gnome/desktop/notifications/application/gnome-power-panel]
 application-id='gnome-power-panel.desktop'
 
+[org/gnome/desktop/notifications/application/io-elementary-appcenter]
+application-id='io.elementary.appcenter.desktop'
+
 [org/gnome/desktop/notifications/application/org-gnome-geary]
 application-id='org.gnome.Geary.desktop'
 
@@ -114,7 +117,7 @@ numlock-state=true
 
 [org/gnome/desktop/peripherals/touchpad]
 click-method='areas'
-send-events='disabled'
+send-events='enabled'
 two-finger-scrolling-enabled=true
 
 [org/gnome/desktop/privacy]
@@ -229,17 +232,12 @@ night-light-temperature=uint32 4271
 
 [org/gnome/settings-daemon/plugins/media-keys]
 control-center=['<Alt>s']
-custom-keybindings=['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1/']
+custom-keybindings=@as []
 email=@as []
 logout=['<Primary><Alt>Delete']
 screenreader=@as []
 terminal=['<Primary><Alt>t', '<Super>Return', '<Super>KP_Enter']
 www=['<Super>b', '<Super>w']
-
-[org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1]
-binding='<Super>c'
-command='code'
-name='VS Code'
 
 [org/gnome/settings-daemon/plugins/power]
 sleep-inactive-ac-timeout=7200
@@ -437,15 +435,15 @@ close-window='<Shift><Super>c'
 copy='<Primary>c'
 copy-html='disabled'
 detach-tab='<Alt>d'
-find='<Primary>f'
+find='disabled'
 find-clear='disabled'
 find-next='disabled'
 find-previous='disabled'
 move-tab-left='disabled'
 move-tab-right='disabled'
 new-tab='<Primary>t'
-new-window='<Primary>n'
-next-tab='<Primary>space'
+new-window='<Primary><Shift>n'
+next-tab='<Primary>b'
 paste='<Primary>v'
 preferences='<Alt>e'
 prev-tab='disabled'
