--- a/.config/.dconf-configs/pop-os-mac.ini
+++ b/.config/.dconf-configs/pop-os-mac.ini
@@ -22,7 +22,7 @@ window-width=954
 locations=[<(uint32 2, <('Campinas', 'SBKP', true, [(-0.40154692362195432, -0.82265123889688618)], [(-0.39968039870670141, -0.82175918366289935)])>)>]
 
 [org/gnome/control-center]
-last-panel='keyboard'
+last-panel='mouse'
 
 [org/gnome/desktop/a11y/applications]
 screen-reader-enabled=false
@@ -120,7 +120,8 @@ numlock-state=true
 
 [org/gnome/desktop/peripherals/touchpad]
 click-method='areas'
-send-events='disabled'
+disable-while-typing=false
+send-events='enabled'
 two-finger-scrolling-enabled=true
 
 [org/gnome/desktop/privacy]
@@ -242,6 +243,11 @@ logout=['<Primary><Alt>Delete']
 screenreader=@as []
 terminal=['<Primary><Alt>t', '<Super>Return', '<Super>KP_Enter']
 www=['<Super>b', '<Super>w']
+
+[org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/PopLaunch1]
+binding='Launch1'
+command='gnome-control-center wifi'
+name='WiFi'
 
 [org/gnome/settings-daemon/plugins/power]
 sleep-inactive-ac-timeout=7200
@@ -439,7 +445,7 @@ close-window='<Shift><Super>c'
 copy='<Primary>c'
 copy-html='disabled'
 detach-tab='<Alt>d'
-find='<Primary>f'
+find='disabled'
 find-clear='disabled'
 find-next='disabled'
 find-previous='disabled'
