--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,61 +1,49 @@
-[line_break]
-disabled = true
+## FIRST LINE/ROW: Info & Status
+# First param ─┌
+[username]
+format = " [╭─$user]($style)@"
+style_user = "bold purple"
+show_always = true
 
-# purple is actually red in dracula
+# Second param
+[hostname]
+format = "[$hostname]($style) in "
+style = "bold dimmed purple"
+ssh_only = false
+disabled = false
 
-# based on the status of the previous command.
+# Third param
+[directory]
+style = "bold blue"
+truncation_length = 4
+truncate_to_repo = false
+truncation_symbol = ".../"
+repo_root_style = "bold yellow"
+
+# Before all the version info (python, nodejs, php, etc.)
+[git_status]
+style = "white"
+ahead = "⇡${count}"
+diverged = "⇕⇡${ahead_count}⇣${behind_count}"
+behind = "⇣${count}"
+
+# Prompt: param 2 └─
 [character]
-success_symbol = "[▶](bold green)"
-error_symbol = "[✖](bold red) "
+success_symbol = " [╰─](bold purple)[λ](bold green)"
+error_symbol = " [╰─](bold purple)[λ](bold red)"
 
-[package]
-disabled = true
-
-[python]
-format = "[$symbol$version]($style) "
-symbol = "python "
-style = "bold green"
-
-[memory_usage]
-format = "| RAM: [${ram}]($style) "
-threshold = 66
-style = "bold dimmed white"
+[cmd_duration]
 disabled = true
 
 [git_branch]
-format = "on [$symbol$branch]($style) "
-symbol = " branch "
+symbol = "branch "
 style = "bold yellow"
-always_show_remote = true
 
-[git_status]
-conflicted = "⚔️ "
-ahead = "⇡(${count}) "
-behind = "⇣(${count}) "
-diverged = "⇕ (${ahead_count}⇡ & ${behind_count}⇣) "
-untracked = "U×${count} "
-stashed = "📦×${count} "
-modified = "📝×${count} "
-staged = "+(${count}) "
-renamed = "»(${count}) "
-deleted = "🗑️×${count} "
-style = "bold red"
-format = "[$all_status$ahead_behind]($style)"
+[nodejs]
+symbol = "⬢ "
+style = "bold green"
 
-[cmd_duration]
-min_time = 10_000  # Show command duration over 10,000 milliseconds (=10 sec)
-format = " [$duration]($style) "
-disabled = true
+[python]
+symbol = "🐍 "
+style = "bold green"
 
-[directory]
-truncation_length = 5
-format = "[$path]($style)[$lock_symbol]($lock_style) "
-truncate_to_repo = false
-style = "bold cyan"
-read_only_style = "purple"
-repo_root_style = "bold green"
-truncation_symbol = ".../"
-
-[username]
-style_user = "bold dimmed blue"
-show_always = true
